# metrics

./: CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE  README.md  build.sh
.github/workflows/: ci.yml  docker-publish.yml
docs/doxygen/: Doxyfile
examples/: CMakeLists.txt  main.cpp
include/ert/metrics/: Metrics.hpp
src/: CMakeLists.txt  Metrics.cpp
